# icubam

./: .codecov.yml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  Dockerfile  README.md  conftest.py  dev_install.md  docker-compose-core.yml  docker-compose.yml  docker_build.sh  docker_run.sh  docker_sms_run.sh  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start_server.sh  start_server_sms.sh  tox.ini
.github/: doc-requirements.txt
configs/: README.md
doc/: Makefile  README.md  analytics.md  api.rst  authentication.md  backoffice.md  cli.md  cli.rst  conf.py  contributing.md  docker.md  index.rst  install.md  make_cli_docs.py  whats_new.md
docker/: Dockerfile  README.md  build_fake_dbs.sh  docker-compose-core.yml  docker-compose-dev.yml  docker-compose-init-db.yml  docker-compose-proxy-nossl.yml  docker-compose-proxy.yml  docker-compose.yml  start_server.sh  start_server_bo.sh  start_server_sms.sh  start_server_www.sh
frontend_tests/: test_services.py
icubam/: __init__.py  authenticator.py  authenticator_test.py  base_server.py  cli.py  config.py  config_test.py  dict_utils.py  icu_tree.py  icu_tree_test.py  map_builder.py  package_test.py  sentry.py  time_utils.py  time_utils_test.py  utils.py
resources/: ROR-IF-overview.htm  config.toml  config_dev.toml  test.toml
scripts/: backup_db.sh  csv_export.py  csv_import.py  csv_lookup_finess.py  export_bedcount_data.py  gen_plots.py  generate_api_key.py  get_id_url.py  ib_register.py  ib_send_sms.py  import_icu.py  levenstein_fix_department_names.py  merge_pre_icubam_bedcounts.py  migrate_db.py  plot_before_after_preprocessing.py  populate_db.py  populate_db_fake.py  populate_user.py  (+10 more)
(+265 files in other folders)
