[metadata]
name = icubam
description = "ICU Bed Activity Monitor."
url = "https://github.com/icubam/icubam"
long_description = file: README.md
license = Apache-2.0
keywords = icu, covid-19, web server, map, dashboard
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Intended Audience :: Healthcare Industry

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
* = *.env
