[metadata]
name = icubam
description = "ICU Bed Activity Monitor."
url = "https://github.com/icubam/icubam"
long_description = file: README.md
license = Apache-2.0
keywords = icu, covid-19, web server, map, dashboard
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Intended Audience :: Healthcare Industry

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    setuptools>=42
    absl-py==0.9.0
    google-api-python-client==1.8.0
    google-auth-httplib2==0.0.3
    google-auth-oauthlib==0.4.1
    messagebird==1.5.0
    pandas==1.0.3
    PyJWT==1.7.1
    python-dotenv==0.12.0
    tornado==6.0.3
    nexmo==2.4.0
    dotmap==1.3.1
    toml==0.10.0
    twilio==6.37.0
    click==7.1.1
    sqlalchemy==1.3.15
    bokeh==2.0.0

[options.package_data]
* = *.env
